--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       background-image: url('img/bg.png');
       background-size: cover;
       background-position: center;
-      opacity: 0.10; /* Adjust this value to control transparency */
+      opacity: 0.10; 
     }
 
     ::-webkit-scrollbar {
